<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/adMob"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" 
        android:background="@color/adbackground"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/adMob"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="6dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/home_btn_lista_item"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/home_button1"
                    android:onClick="onClickFeature"
                    android:text="@string/title_lista_item" />

                <Button
                    android:id="@+id/home_btn_favoritos"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/home_button2"
                    android:onClick="onClickFeature"
                    android:text="@string/title_itens_favoritos" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/home_btn_items_proximos"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/home_button3"
                    android:onClick="onClickFeature"
                    android:text="@string/title_itens_proximos" />

                <Button
                    android:id="@+id/home_btn_mapa_proximos"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/home_button4"
                    android:onClick="onClickFeature"
                    android:text="@string/title_mapa_proximos" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/home_btn_country"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/home_button7"
                    android:onClick="onClickFeature"
                    android:text="@string/title_country" />

                <Button
                    android:id="@+id/home_btn_preferences"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/home_button5"
                    android:onClick="onClickFeature"
                    android:text="@string/title_preferences" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/home_btn_about"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/home_button6"
                    android:onClick="onClickFeature"
                    android:text="@string/title_about" />
                <!--
            <Button android:id="@+id/home_btn_events"
            style="@style/HomeButton"
            android:onClick="onClickFeature"
            android:text="@string/title_events"
            android:drawableTop="@drawable/home_button8"/>
                -->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>